2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attributes `lder' and `ld'.
	(&register_language): Specify for cxx, objc, f77, gcj.
	(&define_linker_variable): New.
	(&lang_cxx_finish, &lang_f77_finish, &lang_objc_finish)
	(&lang_java_finish): Adjust.
	(&libtool_compiler): Remove.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_lib_objects_cond): Don't take $LEX_SEEN as
	argument, as you don't use it.
	Hence...
	(&handle_lib_objects): Don't take $LEX_SEEN as argument, as you
	don't use it.
	Hence...
	(&handle_programs): Don't mess with %lex_sources, as you don't use
	it.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attribute `link'.
	(&register_language): Specify for cxx, objc, f77, gcj.
	(&lang_cxx_finish, &lang_f77_finish, &lang_objc_finish)
	(&lang_java_finish): Adjust.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (&define_compiler_variables): Use only $LANG as
	argument.
	(&handle_languages): Adjust.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (&define_program_variable): Remove.
	(&scan_one_autoconf_file): Skip MAKEINFO when found in an
	AM_MISSING_PROG.
	(&handle_texinfo): Don't define MAKEINFO and TEXI2DVI.
	* texinfos.am: Do it.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_tests_dejagnu): Don't define EXPECT and
	RUNTEST.
	* dejagnu.am: Do it.
	(site.exp): Use `if'.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in: Formatting changes.
	(variable_dump, variables_dump): Rename as...
	(macro_dump, macros_dump): these.

2001-05-08  Akim Demaille  <akim@epita.fr>

	Support `if !COND', `else COND', `end COND'.

	* automake.texi (Conditionals): Document it.
	* automake.in ($WHITE_PATTERN, $MACRO_PATTERN, $BOGUS_MACRO_PATTERN)
	($GNITS_VERSION_PATTERN, $INCLUDE_PATTERN): Use `\d' and `\s'.
	($IF_PATTERN, $ELSE_PATTERN, $ENDIF_PATTERN): Likewise, and accept
	a leading `!' before the condition.
	(&handle_options): Use `\d'.