@@ -1,5 +1,10 @@
 2001-05-08  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (am_install_var): Use `next' instead of `if' on the
+	body of $X loop.
+
+2001-05-08  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (Language): Add attributes `lder' and `ld'.
 	(&register_language): Specify for cxx, objc, f77, gcj.
 	(&define_linker_variable): New.
